src/objects/Work_Plan__c.object
<CustomObject>
    <description>BME-Work plan is a list of significant events in the life-cycle of the Project as part of its current release</description>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <inlineHelpText>A general description of the work plan task</inlineHelpText>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <formula>( End_Date__c-Start_Date__c  )+1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>End date of the project task</description>
        <label>End Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Percent_Complete__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Percentage completeness of the task, defaults to 0</description>
        <label>% Complete</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Predecessor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The preceding task which must be complete before you start this one. The Predecessor Task end date must be before the current &apos;s start date.</inlineHelpText>
        <label>Predecessor</label>
        <referenceTo>Work_Plan__c</referenceTo>
        <relationshipLabel>Successors</relationshipLabel>
        <relationshipName>Succeeding_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_Deliverable__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Deliverable related to this work plan item if applicable.</inlineHelpText>
        <label>Related Deliverable</label>
        <referenceTo>Deliverables__c</referenceTo>
        <relationshipLabel>Related Work Plan Tasks</relationshipLabel>
        <relationshipName>Related_Work_Plan_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_Milestone__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Milestone related to this work plan item if applicable.</inlineHelpText>
        <label>Related Milestone</label>
        <referenceTo>Milestone__c</referenceTo>
        <relationshipLabel>Related Work Plan Tasks</relationshipLabel>
        <relationshipName>Related_Work_Plan_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Release__c</fullName>
        <label>Release</label>
        <referenceTo>Release__c</referenceTo>
        <relationshipLabel>Work Plan</relationshipLabel>
        <relationshipName>Work_Plan</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>Start date of the project task</description>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Task_ID__c</fullName>
        <displayFormat>T-{0000}</displayFormat>
        <externalId>true</externalId>
        <inlineHelpText>Primary generated key for the task. Can be used for easy searches and references.</inlineHelpText>
        <label>Task ID</label>
        <type>AutoNumber</type>
    </fields>
    <label>Work Plan</label>
    <nameField>
        <label>Task Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Work Plan</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Predecessor_end_date_must_be_before</fullName>
        <active>true</active>
        <description>Predecessor&apos;s end date must be before the start date of the successor</description>
        <errorConditionFormula>AND( Predecessor__c &lt;&gt; NULL, Predecessor__r.End_Date__c &gt;= Start_Date__c)</errorConditionFormula>
        <errorDisplayField>Predecessor__c</errorDisplayField>
        <errorMessage>You cannot select a Predecessor with an End Date that is after the Start Date of this work plan task</errorMessage>
    </validationRules>
</CustomObject>